--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,16 +2,23 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>初始Shiro框架</title>
+<title>你是佩奇!</title>
+<script type="text/javascript" src="./jquery/jquery-1.8.2.min.js"></script>
 </head>
 <body>	
 	<div align="center">
 		<h1>Hello,Shiro</h1>
-		<form action="login">
+		<form action="login" method="post">
 			用户名：<input type="text" name="username"/><br/>
 			密&nbsp;&nbsp;&nbsp;码：<input autocomplete="new-password" type="password" name="password"/><br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="登录"/>&nbsp;&nbsp;&nbsp;<input type="reset" value="重置"/><br/>
 		</form>
+		<h1 id="demo"></h1>
 	</div>
 </body>
+<script type="text/javascript">
+	$(function(){
+		
+	});
+</script>
 </html>
